<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".Fr_chat.NewChatActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_back_arrow"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toEndOf="@id/back"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/fab_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24dp"
        android:text="@string/NewMessage"
        />
    <Button
        android:id="@+id/send"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_baseline_send_24"
        android:paddingStart="@dimen/fab_margin"
        android:layout_marginTop="5dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/NC_to"
        />

    <EditText
        android:id="@+id/NC_to"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingEnd="@dimen/fab_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/to_"
        />

    <EditText
        android:id="@+id/NC_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@+id/NC_to"
        android:hint="@string/compose_"
        android:background="@drawable/search"

        />

</androidx.constraintlayout.widget.ConstraintLayout>