<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".Fr_groups.CreateActivity">

    <Button
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_back_arrow"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toEndOf="@id/back"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/fab_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="24dp"
        android:text="@string/NewGroup"
        />

    <EditText
        android:id="@+id/Name_Group"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingEnd="@dimen/fab_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/GName"
        />

    <EditText
        android:id="@+id/descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@+id/Name_Group"
        android:hint="@string/Descripcion"
        android:background="@drawable/search"
        />

    <EditText
        android:id="@+id/AddContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="400dp"
        android:paddingEnd="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@+id/descr"
        android:hint="@string/AddContact"
        android:background="@drawable/search"

        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bBar"
        app:srcCompat="@drawable/ic_baseline_arrow_forward"
        />

    <LinearLayout
        android:id="@+id/bBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:windowSoftInputMode="adjustPan|adjustResize"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>